<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutPage"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_page"
        android:textSize="@dimen/_16sdp"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/background_light"
        android:paddingTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_15sdp"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_200sdp"
        android:scaleType="fitXY"
        android:layout_gravity="center"
        app:srcCompat="@drawable/profile_pic"
        android:layout_marginTop="@dimen/_20sdp"
        android:contentDescription="@string/image" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:textSize="@dimen/_16sdp"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/background_light"
        android:paddingTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_info"
        android:textSize="@dimen/_14sdp"
        android:textColor="@color/colorAccent"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_20sdp" />

</LinearLayout>