<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kids_safari_app"
        android:textSize="@dimen/_24sdp"
        android:gravity="center"
        android:layout_marginTop="@dimen/_60sdp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/_300sdp"
        android:layout_height="@dimen/_250sdp"
        android:scaleType="fitXY"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        android:contentDescription="@string/image"
        app:srcCompat="@drawable/cover" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_75sdp"
        android:layout_marginEnd="@dimen/_75sdp"
        android:textAllCaps="false"
        android:textSize="@dimen/_14sdp"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/background_light"
        android:onClick="startApp"/>

</LinearLayout>