<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".HomePage">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kids_safari_app"
        android:textSize="@dimen/_16sdp"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/background_light"
        android:paddingTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_15sdp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/frame"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_300sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:layout_marginBottom="@dimen/_25sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pick_a_name"
                android:textSize="@dimen/_16sdp"
                android:textColor="@android:color/background_light"
                android:background="@color/colorPrimary"
                android:paddingTop="@dimen/_5sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:gravity="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/colorPrimaryDark" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/left_arrow"
                    android:textSize="@dimen/_20sdp"
                    android:textColor="@android:color/background_light"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="0.10"/>

                <HorizontalScrollView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:scrollbars="none"
                    android:layout_weight="0.80">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <Button
                                android:layout_width="@dimen/_85sdp"
                                android:layout_height="@dimen/_30sdp"
                                android:text="@string/lion"
                                android:textSize="@dimen/_14sdp"
                                android:textAllCaps="false"
                                android:background="@color/colorPrimary"
                                android:textColor="@android:color/background_light"
                                android:layout_marginTop="@dimen/_10sdp"
                                android:layout_marginBottom="@dimen/_10sdp"
                                android:layout_marginStart="@dimen/_5sdp"
                                android:layout_marginEnd="@dimen/_5sdp"
                                android:onClick="lion"
                                style="@style/Widget.AppCompat.Button.Borderless"/>

                            <Button
                                android:layout_width="@dimen/_100sdp"
                                android:layout_height="@dimen/_30sdp"
                                android:text="@string/monkey"
                                android:textSize="@dimen/_14sdp"
                                android:textAllCaps="false"
                                android:background="@color/colorPrimary"
                                android:textColor="@android:color/background_light"
                                android:layout_marginTop="@dimen/_10sdp"
                                android:layout_marginBottom="@dimen/_10sdp"
                                android:layout_marginStart="@dimen/_5sdp"
                                android:layout_marginEnd="@dimen/_5sdp"
                                android:onClick="monkey"
                                style="@style/Widget.AppCompat.Button.Borderless"/>

                            <Button
                                android:layout_width="@dimen/_100sdp"
                                android:layout_height="@dimen/_30sdp"
                                android:text="@string/horse"
                                android:textSize="@dimen/_14sdp"
                                android:textAllCaps="false"
                                android:background="@color/colorPrimary"
                                android:textColor="@android:color/background_light"
                                android:layout_marginTop="@dimen/_10sdp"
                                android:layout_marginBottom="@dimen/_10sdp"
                                android:layout_marginStart="@dimen/_5sdp"
                                android:layout_marginEnd="@dimen/_5sdp"
                                android:onClick="horse"
                                style="@style/Widget.AppCompat.Button.Borderless"/>

                            <Button
                                android:layout_width="@dimen/_100sdp"
                                android:layout_height="@dimen/_30sdp"
                                android:text="@string/bird"
                                android:textSize="@dimen/_14sdp"
                                android:textAllCaps="false"
                                android:background="@color/colorPrimary"
                                android:textColor="@android:color/background_light"
                                android:layout_marginTop="@dimen/_10sdp"
                                android:layout_marginBottom="@dimen/_10sdp"
                                android:layout_marginStart="@dimen/_5sdp"
                                android:layout_marginEnd="@dimen/_5sdp"
                                android:onClick="bird"
                                style="@style/Widget.AppCompat.Button.Borderless"/>

                            <Button
                                android:layout_width="@dimen/_100sdp"
                                android:layout_height="@dimen/_30sdp"
                                android:text="@string/tiger"
                                android:textSize="@dimen/_14sdp"
                                android:textAllCaps="false"
                                android:background="@color/colorPrimary"
                                android:textColor="@android:color/background_light"
                                android:layout_marginTop="@dimen/_10sdp"
                                android:layout_marginBottom="@dimen/_10sdp"
                                android:layout_marginStart="@dimen/_5sdp"
                                android:layout_marginEnd="@dimen/_5sdp"
                                android:onClick="tiger"
                                style="@style/Widget.AppCompat.Button.Borderless"/>

                            <Button
                                android:layout_width="@dimen/_100sdp"
                                android:layout_height="@dimen/_30sdp"
                                android:text="@string/giraffe"
                                android:textSize="@dimen/_14sdp"
                                android:textAllCaps="false"
                                android:background="@color/colorPrimary"
                                android:textColor="@android:color/background_light"
                                android:layout_marginTop="@dimen/_10sdp"
                                android:layout_marginBottom="@dimen/_10sdp"
                                android:layout_marginStart="@dimen/_5sdp"
                                android:layout_marginEnd="@dimen/_5sdp"
                                android:onClick="giraffe"
                                style="@style/Widget.AppCompat.Button.Borderless"/>

                            <Button
                                android:layout_width="@dimen/_100sdp"
                                android:layout_height="@dimen/_30sdp"
                                android:text="@string/rhino"
                                android:textSize="@dimen/_14sdp"
                                android:textAllCaps="false"
                                android:background="@color/colorPrimary"
                                android:textColor="@android:color/background_light"
                                android:layout_marginTop="@dimen/_10sdp"
                                android:layout_marginBottom="@dimen/_10sdp"
                                android:layout_marginStart="@dimen/_5sdp"
                                android:layout_marginEnd="@dimen/_5sdp"
                                android:onClick="rhino"
                                style="@style/Widget.AppCompat.Button.Borderless"/>



                        </LinearLayout>
                </HorizontalScrollView>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/right_arrow"
                    android:textSize="@dimen/_20sdp"
                    android:textColor="@android:color/background_light"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="0.10"/>

            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_30sdp"
                android:text="@string/about"
                android:textSize="@dimen/_14sdp"
                android:textColor="@android:color/background_light"
                android:textAllCaps="false"
                android:background="@color/colorPrimary"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:paddingStart="@dimen/_15sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:layout_gravity="center"
                android:onClick="about"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>